--- a/examples/res/values/strings.xml
+++ b/examples/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="app_name">HackRF_Test</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="openHackRFOne">Open HackRF One</string>
+    <string name="openHackrfDevice">Open HackRF Device</string>
 
 </resources>
