Improved USB transmission. Up to 30 MB/s works fine.

--- a/examples/res/values/strings.xml
+++ b/examples/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="tx">TX</string>
     <string name="sampRate">Sample Rate</string>
     <string name="freq">Frequency</string>
+    <string name="stop">Stop</string>
 
 </resources>
