--- a/examples/res/values/strings.xml
+++ b/examples/res/values/strings.xml
@@ -4,12 +4,16 @@
     <string name="app_name">HackRF_Test</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="openHackrfDevice">Open HackRF Device</string>
+    <string name="open">Open</string>
     <string name="info">Info</string>
     <string name="rx">RX</string>
     <string name="tx">TX</string>
     <string name="sampRate">Sample Rate</string>
     <string name="freq">Frequency</string>
     <string name="stop">Stop</string>
+    <string name="amp">Amplifier</string>
+    <string name="antenna">Antenna Port Power</string>
+    <string name="filename">Filename</string>
+    <string name="vgaGain">Gain</string>
 
 </resources>
