Added LNA gain to gui. Fixed gain scaling.

--- a/examples/res/values/strings.xml
+++ b/examples/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="amp">Amplifier</string>
     <string name="antenna">Antenna Port Power</string>
     <string name="filename">Filename</string>
-    <string name="vgaGain">Gain</string>
+    <string name="vgaGain">VGA Gain</string>
+    <string name="lnaGain">LNA Gain</string>
 
 </resources>
