--- a/examples/res/values/strings.xml
+++ b/examples/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">HackRF_Test</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_showLog">Show Log</string>
     <string name="action_help">Help</string>
     <string name="open">Open</string>
     <string name="info">Info</string>
